tests/checker/diagnostics/0046_core_match_branch_mismatch_04.ml
let _ =
  match false with
  | true -> 3
  | false -> false
